# pf_build

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc  Dockerfile  HOWTORUN.adoc  README.adoc  SECURITY.adoc  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/routes/: bootstrapRouter.py  credentialRouter.py  usersRouter.py
app/config/: settings.py
app/core/controllers/: bootstrapController.py  credentialController.py
app/db/: mongo_client.py
app/models/: bootstrapModel.py
app/utils/: file.py  github.py  jobController.py
docs/: API.adoc  architecture.adoc  operation.adoc
ui/: .env  package.json  tsconfig.cli.json  tsconfig.json  vite.config.ts
ui/browser/: App.tsx  control.tsx  index.html  index.tsx
ui/browser/components/: asciiDocRenderer.tsx  completionMessage.tsx  form.tsx  modal.tsx  subwaySteps.tsx
ui/browser/styles/: styles.css  subwaySteps.css
ui/cli/: pf_call  pf_call.ts  pf_util.ts
ui/lib/: api.ts  pf_build.ts  stateMapping.ts
ui/types/: metadata.ts  processSteps.ts
